<resources>
    <string name="app_name">PTG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="snack">SNACK</string>
    <string name="restoran">RESTAURANT</string>
    <string name="warmindo">WARMINDO</string>
    <string name="bvrg">BEVERAGES</string>
    <string name="tulis_post">Tulis postingan Anda di sini...</string>
    <string name="post_btn">POST</string>
    <string name="judul_category">CATEGORY</string>

</resources>